--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["natcap <take-home-test@natcapresearch.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fiona = "^1.9.6"
+rasterio = "^1.3.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.10.0"
